# WEB

./: Makefile  Makefile.am  README  configure  configure.ac  configure.ac~  main.c  main.c~  shellgas
.c9/metadata/: tab0  tab1  tab10  tab12  tab26  tab4  tab9
.c9/metadata/preview-/: README.md
.c9/metadata/workspace/: Makefile.am  README  README.md  debug.h  foosh.h  hello-c-world.c  list.h  main.c  parser.c  tparse.h  utils.c
.c9/metadata/workspace/.c9/: searchresults
Shellgas/: Makefile  Makefile.am  README  README~  Shellgas  TDD.txt~  in.txt  main.c  main.c~
Shellgas/Programas/: 10_  a.out  threaddemo.c
runcmd/: AUTHORS  INSTALL  INSTALL~  Makefile.am  README  README~  config.mk  runcmd.c  runcmd.c~  testutils.d
