{"filter":false,"title":"Makefile.am","tooltip":"/Makefile.am","undoManager":{"mark":-1,"position":-1,"stack":[]},"ace":{"folds":[],"scrolltop":0,"scrollleft":0,"selection":{"start":{"row":4,"column":8},"end":{"row":4,"column":8},"isBackwards":false},"options":{"guessTabSize":true,"useWrapMode":false,"wrapToView":true},"firstLineState":{"row":82,"mode":"ace/mode/text"}},"timestamp":1499171329750,"hash":"50739abb13c887d2c7bc96aaecbdbdec31c3d4e4"}